Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5750

[linearstore] Broker fails with JERR__AIO: AIO error. (AIO write operation failed: Invalid argument (-22)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • None
    • C++ Broker
    • None

    Description

      While running soak tests, the following failure is occasionally seen:

      [Protocol] error Connection qpid.[::1].5672-[::1]:37555 closed by error: Queue Ve0-2: async_dequeue() failed: jexception 0x0103 wmgr::get_events() threw JERR__AIO: AIO error. (AIO write operation failed: Invalid argument (-22) [pg=0 size=32768 offset=266368 fh=22])
      

      which indicates a problem with the write calls to the AIO libraray.

      This error appears to be probabilistic.

      Attachments

        Activity

          People

            kpvdr Kim van der Riet
            kpvdr Kim van der Riet
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: