QPID-5750: [linearstore] Broker fails with JERR__AIO: AIO error. (AIO write operation failed: Invalid argument (-22)

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1594215 13f79535-47bb-0310-9956-ffa450edef68